Fix for suppressing y scroll when mobile menu visible on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,7 @@ header {
 }
 
 .suppress-y-scroll {
+    position: relative;
     overflow-y: hidden;
 }
 
